# carma-ssc-interface-wrapper

./: Dockerfile  README.md  make_with_coverage.bash  ros-humble-ssc-joystick_2004.0.0-0jammy_amd64.deb  ros-humble-ssc-pm-lexus_1.1.0-0jammy_amd64.deb
.circleci/: config.yml
.github/workflows/: README.md  ci.yml  docker-humble.yml  docker-noetic.yml  docker.yml  dockerhub-humble.yml  dockerhub-noetic.yml  dockerhub.yml  main.yml
.sonarqube/: sonar-scanner.properties
as/: CMakeLists.txt  package.xml
as/launch/: ssc_interface.launch
as/nodes/ssc_interface/: ssc_interface.cpp  ssc_interface.h
docker/: build-image.sh  checkout.bash  checkout.sh  checkout_ros2.bash  get-component-version.sh  install.sh  install_ros2.sh  install_ssc_pm.sh  system_release.sh
hooks/: build  pre_build
humble/: Dockerfile
noetic/: Dockerfile
ssc_ds_fusion/: CMakeLists.txt  LICENSE  README.md  package.xml
ssc_gear_change/: CMakeLists.txt  README.md  package.xml
ssc_gear_change/config/: parameters.yaml
ssc_gear_change/include/ssc_gear_change/: ssc_gear_change.hpp  ssc_gear_change_config.hpp
ssc_gear_change/src/: main.cpp  ssc_gear_change.cpp
ssc_gear_change/src/gear_change/: gear_change.cpp  gear_change.h  gear_change_node.cpp
ssc_interface_wrapper/: CMakeLists.txt  package.xml
ssc_interface_wrapper/config/: parameters.yaml
ssc_interface_wrapper/include/: ssc_interface_wrapper.h  ssc_interface_wrapper_worker.h
ssc_interface_wrapper/include/ssc_interface_wrapper/: ssc_interface_wrapper_config.hpp  ssc_interface_wrapper_node.hpp
ssc_interface_wrapper/launch/: carma_fusion_speed_steering_control.launch  carma_pacifica_speed_steering_control.launch  carma_speed_steering_control.launch  remapped_ssc_interface.launch  ssc_controller_driver.launch  ssc_ds_driver.launch  ssc_ds_fusion_driver.launch  ssc_interface_wrapper.launch  ssc_ne_pacifica_driver.launch  ssc_new_ne_pacifica_driver.launch  ssc_pacmod_driver.launch  ssc_pm_cascadia_dot_10002_driver.launch  ssc_pm_cascadia_dot_10003_driver.launch  ssc_pm_cascadia_dot_10004_driver.launch  ssc_pm_cascadia_dot_80550_driver.launch  ssc_pm_cascadia_driver.launch
ssc_interface_wrapper/src/: main.cpp  ssc_interface_wrapper.cpp  ssc_interface_wrapper_node.cpp  ssc_interface_wrapper_worker.cpp
ssc_interface_wrapper/test/: test_ssc_interface_wrapper.cpp
ssc_interface_wrapper_ros2/: CMakeLists.txt  README.md  package.xml
ssc_interface_wrapper_ros2/config/: converter_params.yaml  parameters.yaml
ssc_interface_wrapper_ros2/include/ssc_interface_wrapper/: converter_node.hpp  ssc_interface_wrapper_config.hpp  ssc_interface_wrapper_node.hpp  ssc_interface_wrapper_worker.hpp
ssc_interface_wrapper_ros2/launch/: carma_speed_steering_control.launch.py  remapped_ssc_interface.launch.py  ssc_interface_wrapper.launch.py  ssc_ne_pacifica_driver.launch.py  ssc_pacmod_driver.launch.py  ssc_params.yaml  ssc_pm_lexus.launch.xml
ssc_interface_wrapper_ros2/src/: converter.cpp  converter_node.cpp  converter_worker.cpp  main.cpp  ssc_interface_wrapper_node.cpp  ssc_interface_wrapper_worker.cpp
ssc_interface_wrapper_ros2/test/: node_test.cpp
ssc_ne_pacifica/: CMakeLists.txt  README.md  package.xml
ssc_pm_cascadia/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT-10002/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT-10003/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT-10004/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT-80550/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT_10002/: CMakeLists.txt  README.md  package.xml
ssc_pm_cascadia_DOT_10003/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT_10004/: CMakeLists.txt  package.xml
ssc_pm_cascadia_DOT_80550/: CMakeLists.txt  package.xml
ssc_pm_cascadia_blue/: CMakeLists.txt  package.xml
ssc_pm_cascadia_dot_10002/: CMakeLists.txt  package.xml
ssc_pm_cascadia_dot_10003/: CMakeLists.txt  package.xml
ssc_pm_cascadia_dot_10004/: CMakeLists.txt  package.xml
ssc_pm_cascadia_dot_80550/: CMakeLists.txt  package.xml
ssc_pm_cascadia_dot_80550/msg/: SpeedModelLogging.msg
ssc_pm_cascadia_red/: CMakeLists.txt  package.xml
ssc_pm_cascadia_silver/: CMakeLists.txt  package.xml
ssc_pm_cascadia_white/: CMakeLists.txt  package.xml
ssc_pm_lexus/: CMakeLists.txt  README.md  package.xml
ssc_pm_lexus_ros2/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
ssc_pm_lexus_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  ssc_pm_lexusConfig.cmake  ssc_pm_lexus__rosidl_generator_cExport-none.cmake  ssc_pm_lexus__rosidl_generator_cExport.cmake  ssc_pm_lexus__rosidl_generator_cppExport.cmake  ssc_pm_lexus__rosidl_typesupport_cExport-none.cmake  ssc_pm_lexus__rosidl_typesupport_cExport.cmake  ssc_pm_lexus__rosidl_typesupport_cppExport-none.cmake  ssc_pm_lexus__rosidl_typesupport_cppExport.cmake  ssc_pm_lexus__rosidl_typesupport_introspection_cExport-none.cmake  ssc_pm_lexus__rosidl_typesupport_introspection_cExport.cmake  ssc_pm_lexus__rosidl_typesupport_introspection_cppExport-none.cmake  ssc_pm_lexus__rosidl_typesupport_introspection_cppExport.cmake
ssc_pm_lexus_ros2/json/: speed_model.json  steering_model.json  veh_controller.json  veh_interface.json
ssc_pm_lexus_ros2/launch/: speed_steering_control.launch.xml  ssc_params.yaml
ssc_pm_lexus_ros2/msg/: SpeedModelLogging.idl  SpeedModelLogging.msg
ssc_tester/: CMakeLists.txt  README.md  package.xml  setup.py
ssc_tester/config/: params.yaml
ssc_tester/launch/: ssc_pacmod_tester.launch
ssc_tester/src/ssc_tester/: ssc_tester_node.py
