<?xml version="1.0"?>
<package>
  <name>ssc_gear_change</name>
  <version>1.0.0</version>
  <description>Node for handling gear changes on some packmod interfaces</description>
  <maintainer email="carma@dot.gov">Carma Support</maintainer>
  <license>Apache 2</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>
  <author email="Michael.McConnell-2@leidos.com">Michael McConnell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>autoware_build_flags</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>automotive_platform_msgs</build_depend>
  <build_depend>automotive_navigation_msgs</build_depend>
  <build_depend>pacmod_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>automotive_platform_msgs</run_depend>
  <run_depend>automotive_navigation_msgs</run_depend>
  <run_depend>pacmod_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>

  <export>
  </export>

</package>
