<?xml version="1.0"?>
<package format = "3">
  <name>ssc_gear_change</name>
  <version>2.3.0</version>
  <description>Node for handling gear changes on some packmod interfaces</description>
  <maintainer email="carma@dot.gov">Carma Support</maintainer>
  <license>Apache 2</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>
  <author email="Michael.McConnell-2@leidos.com">Michael McConnell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>autoware_build_flags</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>pacmod_msgs</depend>
  <depend>autoware_msgs</depend>



  <export>
  </export>

</package>
