<?xml version="1.0"?>
<package format="2">
  <name>ssc_ne_pacifica</name>
  <version>2.3.0</version>
  <description>Speed and Steering Control for a Pacifica with a New Eagle by-wire controller.</description>

  <maintainer email="dstanek@autonomoustuff.com">Daniel Stanek</maintainer>
  <license>Closed Source</license>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <depend>roslint</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>dbw_pacifica_msgs</depend>
  <exec_depend>libas-common</exec_depend>
</package>

