<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>ssc_pm_lexus</name>
  <version>1.1.0</version>
  <description>Speed and Steering Control for Lexus with a PACMod.</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>Closed Source</license>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>pacmod3_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>libas-common</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export><build_type>ament_cmake</build_type></export>
</package>
